--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -8,7 +8,7 @@ theme : night
 # theme-override : assets/css/PITCHME.css
 # theme-override : assets/css/PITCHME.codemax.css
 # logo : assets/images/excella.png
-# highlight : atom-one-light
+highlight : atom-one-light
 # transition : none
 # published : true
 footnote : "React Testing | Pramod Jacob"
